name:               hello-scotty
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable hello-scotty
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wall -threaded
  build-depends:       base                          
                     , scotty                        
                     , bytestring                    
                     , text 
                     , random 
                     , regex-posix                       
                     , postgresql-simple
                     , postgresql-simple-url             
                     , aeson
                     , transformers
                     , HTTP 
                     , http-types
                     , wai-cors
  hs-source-dirs:    src
